Home page, Development process and technologies section

--- a/src/app/pages/home/technologies-section/technologies-section.component.html
+++ b/src/app/pages/home/technologies-section/technologies-section.component.html
@@ -1,4 +1,4 @@
-<div  class="w-full h-full bg-gray-900 flex flex-col p-3 space-y-10 md:p-16">
+<div class="w-full h-full bg-gray-900 flex flex-col p-3 space-y-10 md:p-16">
 
     <div class="w-full flex flex-col space-y-1 justify-center items-start">
       <app-sub-heading subHeadingText="What I work with"></app-sub-heading>
@@ -8,17 +8,19 @@
     <div #techUsed [@staggerFade]="inView ? 'open' : 'close'"
       class="w-full h-full space-x-2 md:space-x-20 py-5 md:py-20 flex justify-center items-center">
   
-      
         <app-icon class="text-gray-600 eachStaggerComponent" iconType="HTML5"  [iconSize]="IconSize.XXL"></app-icon>
+
+        <app-icon class="text-gray-600 eachStaggerComponent" iconType="CSS3"  [iconSize]="IconSize.XXL"></app-icon>
+
+        <app-icon class="text-gray-600 eachStaggerComponent" iconType="JAVASCRIPT" [iconSize]="IconSize.XXL"></app-icon>
   
-        <app-icon class="text-gray-600 eachStaggerComponent" iconType="TAILWINDCSS" [iconSize]="IconSize.XXL"></app-icon>
+        <app-icon class="text-gray-600 eachStaggerComponent" iconType="TYPESCRIPT" [iconSize]="IconSize.XXL"></app-icon>
   
-        <app-icon class="text-gray-600 eachStaggerComponent" iconType="ANGULAR" [iconSize]="IconSize.XXL"></app-icon>
+        <app-icon class="text-gray-600 eachStaggerComponent" iconType="ANGULAR" [iconSize]="IconSize.XXXL"></app-icon>
+
+        <app-icon class="text-gray-600 eachStaggerComponent" iconType="VUEJS" [iconSize]="IconSize.XXXL"></app-icon>
   
-        <app-icon class="text-gray-600 eachStaggerComponent" iconType="NODEJS" [iconSize]="IconSize.XXL"></app-icon>
-  
-        <app-icon class="text-gray-600 eachStaggerComponent" iconType="MONGODB" [iconSize]="IconSize.XXL"></app-icon>
+        <app-icon class="text-gray-600 eachStaggerComponent" iconType="GIT" [iconSize]="IconSize.XXL"></app-icon>        
   
     </div>
   </div>
-  
