--- a/src/app/pages/home/home-landing-section/home-landing-section.component.html
+++ b/src/app/pages/home/home-landing-section/home-landing-section.component.html
@@ -18,7 +18,6 @@
       </div>
   
       <div class="flex w-full justify-center md:justify-start  items-center">
-  public fontSize = FontSize;
         <app-custom-button @slideInFromRightAndFade (onBtnClicked)="goToDevProcess($event)" [size]="fontSize.LG" [bgColor]="customBtnColors.INDIGO600"
           btnLabel="Get Started" [isIconActive]="true" iconType="RIGHT_ARROW" [iconSize]="IconSize.MD"
           iconAnimation="animate-bounceX">
@@ -29,8 +28,9 @@
     <!-- RIGHT_SECTION -->
     <div class="md:flex-1 hidden w-1/2 justify-center items-center md:flex p-10">
   
-      <img @fade hidden src="../../../assets/images/home__illustration.svg" alt="">
+      <!-- <img @fade hidden src="../../../assets/images/home__illustration.svg" alt=""> -->
   
+     
     </div>
   </div>
   
