Implemented Project Section

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -12,10 +12,10 @@
 
       <div
         class="flex w-full text-gray-400 md:pr-20 font-base text-lg md:text-xl justify-center md:justify-start items-center">
-        <span @slideInFromRightAndFade  class="text-center md:text-left">Hey, I'm Suryakant. I am Web Developer working as a Software Engineer at Innominds Software India Pvt Ltd with total of more than 2 years of experience under my belt. I am
+        <span @slideInFromRightAndFade  class="text-center md:text-left">Hey, I'm Suryakant. I am front-end Developer working as a Software Engineer at Innominds Software India Pvt Ltd with total of more than 2 years of experience under my belt. I am
           based out of Chennai, India 🇮🇳
           <br>
-          I am experienced in building JavaScript based webapps. I am comfortable working with web technologies
+          I am experienced in building JavaScript based webapps and comfortable working with web technologies
           like HTML, CSS, Bootstrap, Tailwind CSS, javascript, Typescript, Angular.</span>
       </div>
 
@@ -25,5 +25,13 @@
         </app-custom-button>
       </div>
     </div>
+
+
+    <div class="hidden md:w-1/2 md:h-full justify-end md:flex">
+      <img @fade class="custom-img" src="../../../assets/images/about.jpg"  alt="about">
+    </div>
   </div>
+
+
+
 
