--- a/src/app/pages/home/home-landing-section/home-landing-section.component.html
+++ b/src/app/pages/home/home-landing-section/home-landing-section.component.html
@@ -12,9 +12,8 @@
   
       <div
         class="flex w-full text-gray-400 md:pr-20 font-base text-lg md:text-2xl justify-center md:justify-start items-center">
-        <span @slideInFromRightAndFade class="text-center md:text-left">Currently developing 🚀 awesome maps
-          experiences  Google to help
-          everyday users navigate the world 🚆 😃 </span>
+        <span @slideInFromRightAndFade class="text-center md:text-left">I like to craft solid 💻 and scalable 🚀 frontend products 
+           with great user experience.</span> 
       </div>
   
       <div class="flex w-full justify-center md:justify-start  items-center">
@@ -29,7 +28,7 @@
     <div class="md:flex-1 hidden w-1/2 justify-center items-center md:flex p-10">
   
       <!-- <img @fade hidden src="../../../assets/images/home__illustration.svg" alt=""> -->
-  
+  <img @fade src="../../../../assets/images/programming.png" alt="programming">
      
     </div>
   </div>
