Added image hover effect

--- a/src/app/pages/home/home-landing-section/home-landing-section.component.html
+++ b/src/app/pages/home/home-landing-section/home-landing-section.component.html
@@ -27,7 +27,7 @@
     <!-- RIGHT_SECTION -->
     <div class="md:flex-1 hidden w-1/2 justify-center items-center md:flex p-10">
   
-       <img @fade src="../../../../assets/images/programming.png" alt="programming">
+       <img @fade  class="custom-img" src="../../../../assets/images/programming.png" alt="programming">
      
     </div>
   </div>
