--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,6 +1,11 @@
 .custom-img {
-    width: 500px; 
+    width: 500px;
     height: 300px;
-    margin-right: 60px; 
+    margin-right: 60px;
     margin-top: 100px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.custom-img:hover {
+    transform: scale(1.1);
 }
