--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -25,8 +25,8 @@
   
   <div class="md:hidden xl:hidden fixed z-50 top-auto bottom-0 w-full p-4  ">
     <nav class="flex justify-evenly py-4 bg-indigo-600 shadow-2xl rounded-lg overflow-hidden">
-      <a href="javascript:void(0)" (click)="navigateTo('Home')" [ngClass]="{'text-indigo-900': active === 'Home'}"
-        class="flex flex-col space-y-1 text-gray-300  justify-center items-center cursor-pointer text-sm font-semibold ">
+      <a href="javascript:void(0)" (click)="navigateTo('Home')" [ngClass]="{'text-green-50': active === 'Home'}"
+        class="flex flex-col space-y-1   justify-center items-center cursor-pointer text-sm font-semibold ">
         <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path
             d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
@@ -34,8 +34,8 @@
         Home
       </a>
   
-      <a href="javascript:void(0)" (click)="navigateTo('About')" [ngClass]="{'text-indigo-900': active === 'About'}"
-        class="flex flex-col space-y-1 text-gray-300 justify-center items-center cursor-pointer text-sm font-semibold ">
+      <a href="javascript:void(0)" (click)="navigateTo('About')" [ngClass]="{'text-green-50': active === 'About'}"
+        class="flex flex-col space-y-1 justify-center items-center cursor-pointer text-sm font-semibold ">
         <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd"
             d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z"
@@ -45,8 +45,8 @@
         About
       </a>
   
-      <a href="javascript:void(0)" (click)="navigateTo('Projects')" [ngClass]="{'text-indigo-900': active === 'Projects'}"
-        class="flex flex-col space-y-1 text-gray-300 justify-center items-center cursor-pointer text-sm font-semibold">
+      <a href="javascript:void(0)" (click)="navigateTo('Projects')" [ngClass]="{'text-green-50': active === 'Projects'}"
+        class="flex flex-col space-y-1  justify-center items-center cursor-pointer text-sm font-semibold">
         <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path
             d="M11 3a1 1 0 10-2 0v1a1 1 0 102 0V3zM15.657 5.757a1 1 0 00-1.414-1.414l-.707.707a1 1 0 001.414 1.414l.707-.707zM18 10a1 1 0 01-1 1h-1a1 1 0 110-2h1a1 1 0 011 1zM5.05 6.464A1 1 0 106.464 5.05l-.707-.707a1 1 0 00-1.414 1.414l.707.707zM5 10a1 1 0 01-1 1H3a1 1 0 110-2h1a1 1 0 011 1zM8 16v-1h4v1a2 2 0 11-4 0zM12 14c.015-.34.208-.646.477-.859a4 4 0 10-4.954 0c.27.213.462.519.476.859h4.002z" />
@@ -54,8 +54,8 @@
         Projects
       </a>
   
-      <a href="javascript:void(0)" (click)="navigateTo('Contact')" [ngClass]="{'text-indigo-900': active === 'Contact'}"
-        class="flex flex-col space-y-1 text-gray-300 justify-center items-center cursor-pointer text-sm font-semibold ">
+      <a href="javascript:void(0)" (click)="navigateTo('Contact')" [ngClass]="{'text-green-50': active === 'Contact'}"
+        class="flex flex-col space-y-1  justify-center items-center cursor-pointer text-sm font-semibold ">
         <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path
             d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
