Contact and tech changes

--- a/src/app/pages/home/technologies-section/technologies-section.component.html
+++ b/src/app/pages/home/technologies-section/technologies-section.component.html
@@ -18,7 +18,7 @@
 
         <app-icon class="text-gray-600 eachStaggerComponent" iconType="ANGULAR" [iconSize]="IconSize.XXXL"></app-icon>
 
-        <app-icon class="text-gray-600 eachStaggerComponent" iconType="VUEJS" [iconSize]="IconSize.XXXL"></app-icon>
+        <app-icon class="text-gray-600 eachStaggerComponent" iconType="REACT" [iconSize]="IconSize.XXXL"></app-icon>
 
         <app-icon class="text-gray-600 eachStaggerComponent" iconType="GIT" [iconSize]="IconSize.XXL"></app-icon>
 
