--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div id="contact" class="w-full h-full bg-gray-800 flex flex-col px-3 py-5 space-y-20 md:space-y-10 md:p-16">
 
     <div class="w-full flex flex-col space-y-1 justify-center items-start">
-      <app-sub-heading subHeadingText="What’s on your mind"></app-sub-heading>
+      <app-sub-heading subHeadingText="What&#39;s on your mind"></app-sub-heading>
       <app-heading [bgColor]="HeadingColors.DEFAULT_GRADIENT" headingText="Get In Touch"></app-heading>
     </div>
   
@@ -9,7 +9,7 @@
   
       <div class="w-full flex text-gray-400 text-xl font-medium">
         Excited to work together on something? I am always open to opportunities to learn something new everyday.
-        Let’s connect!
+        Let&#39;s connect!
       </div>
   
       <div class="bg-gray-900 text-gray-400 rounded-lg flex justify-between items-center">
