Updated the about section

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -12,7 +12,7 @@
 
       <div
         class="flex w-full text-gray-400 md:pr-20 font-base text-lg md:text-xl justify-center md:justify-start items-center">
-        <span @slideInFromRightAndFade  class="text-center md:text-left">Hey, I'm Suryakant. I am front-end Developer working as a Software Engineer at Innominds Software India Pvt Ltd with total of more than 2 years of experience under my belt. I am
+        <span @slideInFromRightAndFade  class="text-center md:text-left">Hey, I'm Suryakant. I am front-end Developer working as a Software Engineer at UST International Pvt Ltd with total of more than 3.5 years of experience under my belt. I am
           based out of Chennai, India 🇮🇳
           <br>
           I am experienced in building JavaScript based webapps and comfortable working with web technologies
